background__img-position-center

--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -965,7 +965,7 @@
                     data-original-uri="https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium"
                     style="object-fit: cover; vertical-align: bottom; border-radius: 50%;"
                    />
-                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium'); background-size: cover; border-radius: 50%;"></div>
+                   <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium'); background-size: cover; border-radius: 50%;"></div>
                   </div>
                  </span>
                  <span class="flex-1">
