--- a/become-a-host/welcome.html
+++ b/become-a-host/welcome.html
@@ -188,7 +188,7 @@
                                    style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                                   />
                                   <div
-                                   class="_15p4g025"
+                                   class="background__img-position-center"
                                    style="background-image: url('https://a0.muscache.com/im/pictures/miso/Hosting-742658061004193533/original/49566ac0-cc44-4b6f-83eb-28522c6be530.jpeg?aki_policy=small'); background-size: cover; border-radius: 8px;"
                                   ></div>
                                  </div>
@@ -224,7 +224,7 @@
                                    data-original-uri="https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg"
                                    style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                                   />
-                                  <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
+                                  <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
                                  </div>
                                 </span>
                                 <span class="flex-1">Your Apartment listing started October 21, 2022</span>
@@ -258,7 +258,7 @@
                                    data-original-uri="https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg"
                                    style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                                   />
-                                  <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
+                                  <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
                                  </div>
                                 </span>
                                 <span class="flex-1">Your Apartment listing</span>
@@ -447,7 +447,7 @@
                      style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                     />
                     <div
-                     class="_15p4g025"
+                     class="background__img-position-center"
                      style="background-image: url('https://a0.muscache.com/im/pictures/miso/Hosting-742658061004193533/original/49566ac0-cc44-4b6f-83eb-28522c6be530.jpeg?aki_policy=small'); background-size: cover; border-radius: 8px;"
                     ></div>
                    </div>
@@ -483,7 +483,7 @@
                      data-original-uri="https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg"
                      style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                     />
-                    <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
+                    <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
                    </div>
                   </span>
                   <span class="flex-1">Your Apartment listing started October 21, 2022</span>
@@ -517,7 +517,7 @@
                      data-original-uri="https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg"
                      style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                     />
-                    <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
+                    <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/pictures/893cb7b3-6902-4c92-b136-235afe5511da.jpg'); background-size: cover; border-radius: 8px;"></div>
                    </div>
                   </span>
                   <span class="flex-1">Your Apartment listing</span>
@@ -1056,7 +1056,7 @@
                     data-original-uri="https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium"
                     style="object-fit: cover; vertical-align: bottom; border-radius: 50%;"
                    />
-                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium'); background-size: cover; border-radius: 50%;"></div>
+                   <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium'); background-size: cover; border-radius: 50%;"></div>
                   </div>
                  </span>
                  <span class="flex-1">
