--- a/edit/what.html
+++ b/edit/what.html
@@ -4037,7 +4037,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                       data-original-uri="https://a0.muscache.com/im/pictures/e4468f0c-ff12-4ff4-9691-afc0dabdc8a7.jpg?im_w=240"
                       style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                      />
-                     <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/e4468f0c-ff12-4ff4-9691-afc0dabdc8a7.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
+                     <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/e4468f0c-ff12-4ff4-9691-afc0dabdc8a7.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
                     </div>
                    </div>
                    <div class="_gfomxi">
@@ -4069,7 +4069,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                       data-original-uri="https://a0.muscache.com/im/pictures/13c4090f-d549-4c69-b724-15ed49de040a.jpg?im_w=240"
                       style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                      />
-                     <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/13c4090f-d549-4c69-b724-15ed49de040a.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
+                     <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/13c4090f-d549-4c69-b724-15ed49de040a.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
                     </div>
                    </div>
                    <div class="_gfomxi">
@@ -4103,7 +4103,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                       data-original-uri="https://a0.muscache.com/im/pictures/7074f284-7401-496d-a065-f0a64f7c0fa0.jpg?im_w=240"
                       style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                      />
-                     <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/7074f284-7401-496d-a065-f0a64f7c0fa0.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
+                     <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/7074f284-7401-496d-a065-f0a64f7c0fa0.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
                     </div>
                    </div>
                    <div class="_gfomxi">
@@ -4145,7 +4145,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                       data-original-uri="https://a0.muscache.com/im/pictures/e8c10c9a-5eda-4440-9b9e-f047cfe7a27d.jpg?im_w=240"
                       style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                      />
-                     <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/e8c10c9a-5eda-4440-9b9e-f047cfe7a27d.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
+                     <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/e8c10c9a-5eda-4440-9b9e-f047cfe7a27d.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
                     </div>
                    </div>
                    <div class="_gfomxi">
