--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -346,7 +346,7 @@
                                                 data-original-uri="https://a0.muscache.com/pictures/c54eac11-06c2-456e-ba70-af15c248e40b.jpg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/pictures/c54eac11-06c2-456e-ba70-af15c248e40b.jpg);
                                                   background-size: cover;
@@ -516,7 +516,7 @@ Cape Town, South Africa"
                                                     "
                                                   />
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/pictures/73b2dd1a-e7ff-4355-a24b-f1cf0b9814cc.jpg');
                                                       background-size: cover;
@@ -738,7 +738,7 @@ Rome, Italy"
                                                     "
                                                   />
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/pictures/f81fd954-480b-4dec-b7c9-46e77b3607b5.jpg');
                                                       background-size: cover;
@@ -891,7 +891,7 @@ Harlem, New York City"
                                                     "
                                                   />
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/pictures/b81c1a85-4dfd-433b-bf5f-699e86fc55fb.jpg');
                                                       background-size: cover;
@@ -1109,7 +1109,7 @@ Harlem, New York City"
                                                     "
                                                   />
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/pictures/59edd3ea-9012-422f-8ace-9400451ac1ee.jpg');
                                                       background-size: cover;
@@ -1297,7 +1297,7 @@ Harlem, New York City"
                                               "
                                             />
                                             <div
-                                              class="_15p4g025"
+                                              class="background__img-position-center"
                                               style="
                                                 background-image: url('https://a0.muscache.com/pictures/bd1e82d6-68c0-4246-8c9c-746f5496320a.jpg');
                                                 background-size: cover;
@@ -1376,7 +1376,7 @@ Harlem, New York City"
                                               "
                                             />
                                             <div
-                                              class="_15p4g025"
+                                              class="background__img-position-center"
                                               style="
                                                 background-image: url('https://a0.muscache.com/pictures/d8bd097d-5728-4626-bf91-8fd6a6acbfcf.jpg');
                                                 background-size: cover;
@@ -1450,7 +1450,7 @@ Harlem, New York City"
                                               "
                                             />
                                             <div
-                                              class="_15p4g025"
+                                              class="background__img-position-center"
                                               style="
                                                 background-image: url('https://a0.muscache.com/pictures/03d84a18-d957-4df2-b76d-d7856eeedbe3.jpg');
                                                 background-size: cover;
@@ -1645,7 +1645,7 @@ Harlem, New York City"
                                                 data-original-uri="https://a0.muscache.com/pictures/76432a31-1e91-4251-8e96-29cf6e4acce6.jpg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/pictures/76432a31-1e91-4251-8e96-29cf6e4acce6.jpg);
                                                   background-size: cover;
