--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -268,7 +268,7 @@
                                                           "
                                                       /></picture>
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/c1dd351c-3898-415a-bcad-bc85d642dc98.jpg?im_w=720');
                                                           background-size: cover;
