--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1397,7 +1397,7 @@
                                                                   src="https://a0.muscache.com/im/pictures/user/11b82a0c-ee36-4314-9cd1-b04ef6e5df54.jpg?im_w=240"
                                                                   data-original-uri="https://a0.muscache.com/im/pictures/user/11b82a0c-ee36-4314-9cd1-b04ef6e5df54.jpg?im_w=240"
                                                                   style="object-fit: cover; vertical-align: bottom;">
-                                                                <div class="_15p4g025"
+                                                                <div class="background__img-position-center"
                                                                   style="background-image: url(&quot;https://a0.muscache.com/im/pictures/user/11b82a0c-ee36-4314-9cd1-b04ef6e5df54.jpg?im_w=240&quot;); background-size: cover;">
                                                                 </div>
                                                               </div>
@@ -1459,7 +1459,7 @@
                                                                       src="https://a0.muscache.com/im/pictures/user/51096f5e-7033-44d9-ad9e-ebb6bdb41051.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/51096f5e-7033-44d9-ad9e-ebb6bdb41051.jpg?im_w=240"
                                                                       style="object-fit: cover; vertical-align: bottom;">
-                                                                    <div class="_15p4g025"
+                                                                    <div class="background__img-position-center"
                                                                       style="background-image: url(&quot;https://a0.muscache.com/im/pictures/user/51096f5e-7033-44d9-ad9e-ebb6bdb41051.jpg?im_w=240&quot;); background-size: cover;">
                                                                     </div>
                                                                   </div>
@@ -1479,7 +1479,7 @@
                                                                       src="https://a0.muscache.com/im/pictures/user/58f6db96-fdc1-46e7-86d2-163eca05d129.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/58f6db96-fdc1-46e7-86d2-163eca05d129.jpg?im_w=240"
                                                                       style="object-fit: cover; vertical-align: bottom;">
-                                                                    <div class="_15p4g025"
+                                                                    <div class="background__img-position-center"
                                                                       style="background-image: url(&quot;https://a0.muscache.com/im/pictures/user/58f6db96-fdc1-46e7-86d2-163eca05d129.jpg?im_w=240&quot;); background-size: cover;">
                                                                     </div>
                                                                   </div>
@@ -1499,7 +1499,7 @@
                                                                       src="https://a0.muscache.com/im/pictures/user/bb74f63f-d817-4af7-882d-abc4d8c7e060.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/bb74f63f-d817-4af7-882d-abc4d8c7e060.jpg?im_w=240"
                                                                       style="object-fit: cover; vertical-align: bottom;">
-                                                                    <div class="_15p4g025"
+                                                                    <div class="background__img-position-center"
                                                                       style="background-image: url(&quot;https://a0.muscache.com/im/pictures/user/bb74f63f-d817-4af7-882d-abc4d8c7e060.jpg?im_w=240&quot;); background-size: cover;">
                                                                     </div>
                                                                   </div>
@@ -6278,7 +6278,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                   src="https://a0.muscache.com/im/pictures/user/11b82a0c-ee36-4314-9cd1-b04ef6e5df54.jpg?im_w=240"
                                                                   data-original-uri="https://a0.muscache.com/im/pictures/user/11b82a0c-ee36-4314-9cd1-b04ef6e5df54.jpg?im_w=240"
                                                                   style="object-fit: cover; vertical-align: bottom;">
-                                                                <div class="_15p4g025"
+                                                                <div class="background__img-position-center"
                                                                   style="background-image: url(&quot;https://a0.muscache.com/im/pictures/user/11b82a0c-ee36-4314-9cd1-b04ef6e5df54.jpg?im_w=240&quot;); background-size: cover;">
                                                                 </div>
                                                               </div>
@@ -6344,7 +6344,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                       src="https://a0.muscache.com/im/pictures/user/51096f5e-7033-44d9-ad9e-ebb6bdb41051.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/51096f5e-7033-44d9-ad9e-ebb6bdb41051.jpg?im_w=240"
                                                                       style="object-fit: cover; vertical-align: bottom;">
-                                                                    <div class="_15p4g025"
+                                                                    <div class="background__img-position-center"
                                                                       style="background-image: url(&quot;https://a0.muscache.com/im/pictures/user/51096f5e-7033-44d9-ad9e-ebb6bdb41051.jpg?im_w=240&quot;); background-size: cover;">
                                                                     </div>
                                                                   </div>
@@ -6363,7 +6363,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                       src="https://a0.muscache.com/im/pictures/user/58f6db96-fdc1-46e7-86d2-163eca05d129.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/58f6db96-fdc1-46e7-86d2-163eca05d129.jpg?im_w=240"
                                                                       style="object-fit: cover; vertical-align: bottom;">
-                                                                    <div class="_15p4g025"
+                                                                    <div class="background__img-position-center"
                                                                       style="background-image: url(&quot;https://a0.muscache.com/im/pictures/user/58f6db96-fdc1-46e7-86d2-163eca05d129.jpg?im_w=240&quot;); background-size: cover;">
                                                                     </div>
                                                                   </div>
@@ -6382,7 +6382,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                       src="https://a0.muscache.com/im/pictures/user/bb74f63f-d817-4af7-882d-abc4d8c7e060.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/bb74f63f-d817-4af7-882d-abc4d8c7e060.jpg?im_w=240"
                                                                       style="object-fit: cover; vertical-align: bottom;">
-                                                                    <div class="_15p4g025"
+                                                                    <div class="background__img-position-center"
                                                                       style="background-image: url(&quot;https://a0.muscache.com/im/pictures/user/bb74f63f-d817-4af7-882d-abc4d8c7e060.jpg?im_w=240&quot;); background-size: cover;">
                                                                     </div>
                                                                   </div>
