--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -216,7 +216,7 @@
                                                             style="object-fit: cover; vertical-align: bottom;"
                                                             fetchpriority="high" id="FMP-target">
                                                         </picture>
-                                                        <div class="_15p4g025"
+                                                        <div class="background__img-position-center"
                                                           style="background-image: url(&quot;https://a0.muscache.com/im/pictures/495d71a4-6d5b-4697-89fd-d3398412b4f4.jpg?im_w=720&quot;); background-size: cover;">
                                                         </div>
                                                       </div>
@@ -237,7 +237,7 @@
                                                             data-original-uri="https://a0.muscache.com/pictures/9a1bbbb4-2007-4f21-893f-3bc699f9e1d7.jpg"
                                                             style="object-fit: cover; vertical-align: bottom;">
                                                         </picture>
-                                                        <div class="_15p4g025"
+                                                        <div class="background__img-position-center"
                                                           style="background-image: url(&quot;https://a0.muscache.com/im/pictures/9a1bbbb4-2007-4f21-893f-3bc699f9e1d7.jpg?im_w=720&quot;); background-size: cover;">
                                                         </div>
                                                       </div>
