--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -19353,7 +19353,7 @@
                                                               object-fit: cover;
                                                               vertical-align: bottom;
                                                             " />
-                                                    <div class="_15p4g025" style="
+                                                    <div class="background__img-position-center" style="
                                                               background-image: url('https://a0.muscache.com/im/pictures/user/9cdaaee5-1a67-4c44-8101-6f0785c5fe8b.jpg?im_w=240');
                                                               background-size: cover;
                                                             "></div>
@@ -19426,7 +19426,7 @@
                                                               object-fit: cover;
                                                               vertical-align: bottom;
                                                             " />
-                                                    <div class="_15p4g025" style="
+                                                    <div class="background__img-position-center" style="
                                                               background-image: url('https://a0.muscache.com/im/pictures/user/c886b3ce-b607-4a23-9b07-ae8c4151592e.jpg?im_w=240');
                                                               background-size: cover;
                                                             "></div>
@@ -19496,7 +19496,7 @@
                                                               object-fit: cover;
                                                               vertical-align: bottom;
                                                             " />
-                                                    <div class="_15p4g025" style="
+                                                    <div class="background__img-position-center" style="
                                                               background-image: url('https://a0.muscache.com/defaults/user_pic-225x225.png?im_w=240');
                                                               background-size: cover;
                                                             "></div>
@@ -19561,7 +19561,7 @@
                                                               object-fit: cover;
                                                               vertical-align: bottom;
                                                             " />
-                                                    <div class="_15p4g025" style="
+                                                    <div class="background__img-position-center" style="
                                                               background-image: url('https://a0.muscache.com/im/users/31729712/profile_pic/1430661568/original.jpg?im_w=240');
                                                               background-size: cover;
                                                             "></div>
@@ -19681,7 +19681,7 @@
                                                               object-fit: cover;
                                                               vertical-align: bottom;
                                                             " />
-                                                    <div class="_15p4g025" style="
+                                                    <div class="background__img-position-center" style="
                                                               background-image: url('https://a0.muscache.com/im/users/4068979/profile_pic/1389544948/original.jpg?im_w=240');
                                                               background-size: cover;
                                                             "></div>
@@ -25538,7 +25538,7 @@
                                                     object-fit: cover;
                                                     vertical-align: bottom;
                                                   " />
-                                              <div class="_15p4g025" style="
+                                              <div class="background__img-position-center" style="
                                                     background-image: url('https://a0.muscache.com/im/pictures/user/9cdaaee5-1a67-4c44-8101-6f0785c5fe8b.jpg?im_w=240');
                                                     background-size: cover;
                                                   "></div>
@@ -25605,7 +25605,7 @@
                                                     object-fit: cover;
                                                     vertical-align: bottom;
                                                   " />
-                                              <div class="_15p4g025" style="
+                                              <div class="background__img-position-center" style="
                                                     background-image: url('https://a0.muscache.com/im/pictures/user/c886b3ce-b607-4a23-9b07-ae8c4151592e.jpg?im_w=240');
                                                     background-size: cover;
                                                   "></div>
@@ -25670,7 +25670,7 @@
                                                     object-fit: cover;
                                                     vertical-align: bottom;
                                                   " />
-                                              <div class="_15p4g025" style="
+                                              <div class="background__img-position-center" style="
                                                     background-image: url('https://a0.muscache.com/defaults/user_pic-225x225.png?im_w=240');
                                                     background-size: cover;
                                                   "></div>
@@ -25731,7 +25731,7 @@
                                                     object-fit: cover;
                                                     vertical-align: bottom;
                                                   " />
-                                              <div class="_15p4g025" style="
+                                              <div class="background__img-position-center" style="
                                                     background-image: url('https://a0.muscache.com/im/users/31729712/profile_pic/1430661568/original.jpg?im_w=240');
                                                     background-size: cover;
                                                   "></div>
@@ -25811,7 +25811,7 @@
                                                     object-fit: cover;
                                                     vertical-align: bottom;
                                                   " />
-                                              <div class="_15p4g025" style="
+                                              <div class="background__img-position-center" style="
                                                     background-image: url('https://a0.muscache.com/im/users/4068979/profile_pic/1389544948/original.jpg?im_w=240');
                                                     background-size: cover;
                                                   "></div>
@@ -27529,7 +27529,7 @@
                               src="https://a0.muscache.com/pictures/adafb11b-41e9-49d3-908e-049dfd6934b6.jpg"
                               data-original-uri="https://a0.muscache.com/pictures/adafb11b-41e9-49d3-908e-049dfd6934b6.jpg"
                               style="object-fit: cover; vertical-align: bottom;">
-                            <div class="_15p4g025"
+                            <div class="background__img-position-center"
                               style="background-image: url(&quot;https://a0.muscache.com/pictures/adafb11b-41e9-49d3-908e-049dfd6934b6.jpg&quot;); background-size: cover;">
                             </div>
                           </div>
