--- a/listings-product/specific_trip.html
+++ b/listings-product/specific_trip.html
@@ -6371,7 +6371,7 @@
                                                         <div class="_1k62s0t6">
                                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Message from Airbnb Support" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;">
                                                             <img class="img-full" aria-hidden="true" alt="Message from Airbnb Support" decoding="async" elementtiming="LCP-target" src="https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg" data-original-uri="https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg" style="object-fit: cover; vertical-align: bottom;">
-                                                            <div class="_15p4g025" style="background-image: url(&quot;https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg&quot;); background-size: cover;">
+                                                            <div class="background__img-position-center" style="background-image: url(&quot;https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg&quot;); background-size: cover;">
                                                             </div>
                                                           </div>
                                                         </div>
@@ -6442,7 +6442,7 @@
                                                                   <div class="_1136pv6k">
                                                                     <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 64px; width: 64px; min-height: 1px;">
                                                                       <img class="img-full" aria-hidden="true" alt="" decoding="async" elementtiming="LCP-target" src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large" data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large" style="object-fit: cover; vertical-align: bottom;">
-                                                                      <div class="_15p4g025" style="background-image: url(&quot;https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large&quot;); background-size: cover;">
+                                                                      <div class="background__img-position-center" style="background-image: url(&quot;https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large&quot;); background-size: cover;">
                                                                       </div>
                                                                     </div>
                                                                   </div>
@@ -6523,7 +6523,7 @@
                                                             <div class="_15cornq">
                                                               <div class="img-middle" role="img" aria-busy="false" aria-label="Select to open user profile for Jose Angelo" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;">
                                                                 <img class="img-full" aria-hidden="true" alt="Select to open user profile for Jose Angelo" decoding="async" elementtiming="LCP-target" src="https://a0.muscache.com/defaults/user_pic-225x225.png?v=3" data-original-uri="https://a0.muscache.com/defaults/user_pic-225x225.png?v=3" style="object-fit: cover; vertical-align: bottom;">
-                                                                <div class="_15p4g025" style="background-image: url(&quot;https://a0.muscache.com/defaults/user_pic-225x225.png?v=3&quot;); background-size: cover;">
+                                                                <div class="background__img-position-center" style="background-image: url(&quot;https://a0.muscache.com/defaults/user_pic-225x225.png?v=3&quot;); background-size: cover;">
                                                                 </div>
                                                               </div>
                                                             </div>
@@ -6562,7 +6562,7 @@
                                                         <div class="_1k62s0t6">
                                                           <div class="img-middle" role="img" aria-busy="false" aria-label="Message from Airbnb Support" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;">
                                                             <img class="img-full" aria-hidden="true" alt="Message from Airbnb Support" decoding="async" elementtiming="LCP-target" src="https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg" data-original-uri="https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg" style="object-fit: cover; vertical-align: bottom;">
-                                                            <div class="_15p4g025" style="background-image: url(&quot;https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg&quot;); background-size: cover;">
+                                                            <div class="background__img-position-center" style="background-image: url(&quot;https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg&quot;); background-size: cover;">
                                                             </div>
                                                           </div>
                                                         </div>
