--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -374,7 +374,7 @@
                                                       />
                                                     </picture>
                                                     <div
-                                                      class="_15p4g025"
+                                                      class="background__img-position-center"
                                                       style="
                                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/bfc211eb-8496-4828-a106-2b2992a374e1.jpeg?im_w=720');
                                                         background-size: cover;
@@ -497,7 +497,7 @@
                                                       />
                                                     </picture>
                                                     <div
-                                                      class="_15p4g025"
+                                                      class="background__img-position-center"
                                                       style="
                                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3903130-media_library/original/b63dc66d-f9f3-43b2-af96-44f324f21d15.jpeg?im_w=720');
                                                         background-size: cover;
