--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -382,7 +382,7 @@
                                                                 src="https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg"
                                                                 data-original-uri="https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg"
                                                                 style="object-fit: cover; vertical-align: bottom;">
-                                                              <div class="_15p4g025"
+                                                              <div class="background__img-position-center"
                                                                 style="background-image: url(&quot;https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg&quot;); background-size: cover;">
                                                               </div>
                                                             </div>
@@ -479,7 +479,7 @@
                                                                           src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large"
                                                                           data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large"
                                                                           style="object-fit: cover; vertical-align: bottom;">
-                                                                        <div class="_15p4g025"
+                                                                        <div class="background__img-position-center"
                                                                           style="background-image: url(&quot;https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large&quot;); background-size: cover;">
                                                                         </div>
                                                                       </div>
@@ -592,7 +592,7 @@
                                                                     src="https://a0.muscache.com/defaults/user_pic-225x225.png?v=3"
                                                                     data-original-uri="https://a0.muscache.com/defaults/user_pic-225x225.png?v=3"
                                                                     style="object-fit: cover; vertical-align: bottom;">
-                                                                  <div class="_15p4g025"
+                                                                  <div class="background__img-position-center"
                                                                     style="background-image: url(&quot;https://a0.muscache.com/defaults/user_pic-225x225.png?v=3&quot;); background-size: cover;">
                                                                   </div>
                                                                 </div>
@@ -652,7 +652,7 @@
                                                                 src="https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg"
                                                                 data-original-uri="https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg"
                                                                 style="object-fit: cover; vertical-align: bottom;">
-                                                              <div class="_15p4g025"
+                                                              <div class="background__img-position-center"
                                                                 style="background-image: url(&quot;https://a0.muscache.com/pictures/e8aed3c4-d558-4efa-8a08-356d610c9ff1.jpg&quot;); background-size: cover;">
                                                               </div>
                                                             </div>
@@ -869,7 +869,7 @@
                                                                     src="https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium"
                                                                     data-original-uri="https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium"
                                                                     style="object-fit: cover; vertical-align: bottom;">
-                                                                  <div class="_15p4g025"
+                                                                  <div class="background__img-position-center"
                                                                     style="background-image: url(&quot;https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium&quot;); background-size: cover;">
                                                                   </div>
                                                                 </div>
@@ -1131,7 +1131,7 @@
                                                                     src="https://a0.muscache.com/im/users/25152659/profile_pic/1423833182/original.jpg?aki_policy=profile_x_medium"
                                                                     data-original-uri="https://a0.muscache.com/im/users/25152659/profile_pic/1423833182/original.jpg?aki_policy=profile_x_medium"
                                                                     style="object-fit: cover; vertical-align: bottom;">
-                                                                  <div class="_15p4g025"
+                                                                  <div class="background__img-position-center"
                                                                     style="background-image: url(&quot;https://a0.muscache.com/im/users/25152659/profile_pic/1423833182/original.jpg?aki_policy=profile_x_medium&quot;); background-size: cover;">
                                                                   </div>
                                                                 </div>
@@ -1334,7 +1334,7 @@
                                                     src="https://a0.muscache.com/im/pictures/3b8f5bad-0ca7-4414-9ea4-a7e6dfa4e128.jpg?aki_policy=small"
                                                     data-original-uri="https://a0.muscache.com/im/pictures/3b8f5bad-0ca7-4414-9ea4-a7e6dfa4e128.jpg?aki_policy=small"
                                                     style="object-fit: cover; vertical-align: bottom; border-radius: 8px;">
-                                                  <div class="_15p4g025"
+                                                  <div class="background__img-position-center"
                                                     style="background-image: url(&quot;https://a0.muscache.com/im/pictures/3b8f5bad-0ca7-4414-9ea4-a7e6dfa4e128.jpg?aki_policy=small&quot;); background-size: cover; border-radius: 8px;">
                                                   </div>
                                                 </div>
@@ -1426,7 +1426,7 @@
                                                                     src="https://a0.muscache.com/defaults/user_pic-225x225.png?v=3"
                                                                     data-original-uri="https://a0.muscache.com/defaults/user_pic-225x225.png?v=3"
                                                                     style="object-fit: cover; vertical-align: bottom;">
-                                                                  <div class="_15p4g025"
+                                                                  <div class="background__img-position-center"
                                                                     style="background-image: url(&quot;https://a0.muscache.com/defaults/user_pic-225x225.png?v=3&quot;); background-size: cover;">
                                                                   </div>
                                                                 </div>
@@ -1527,7 +1527,7 @@
                                                                     src="https://a0.muscache.com/im/pictures/user/66074047-3f29-424f-8bd9-469748c2b552.jpg?aki_policy=profile_x_medium"
                                                                     data-original-uri="https://a0.muscache.com/im/pictures/user/66074047-3f29-424f-8bd9-469748c2b552.jpg?aki_policy=profile_x_medium"
                                                                     style="object-fit: cover; vertical-align: bottom;">
-                                                                  <div class="_15p4g025"
+                                                                  <div class="background__img-position-center"
                                                                     style="background-image: url(&quot;https://a0.muscache.com/im/pictures/user/66074047-3f29-424f-8bd9-469748c2b552.jpg?aki_policy=profile_x_medium&quot;); background-size: cover;">
                                                                   </div>
                                                                 </div>
