--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -168,7 +168,7 @@
                                                   object-fit: cover;
                                                   vertical-align: bottom;
                                                 ">
-                                              <div class="_15p4g025" style="
+                                              <div class="background__img-position-center" style="
                                                   background-image: url('//a0.muscache.com/airbnb/static/packages/assets/frontend/experience-p5/images/fireworks.6ada92670372f1d3c3bc7d216db654fb.gif');
                                                   background-size: cover;
                                                 "></div>
@@ -199,7 +199,7 @@
                                               vertical-align: bottom;
                                               border-radius: 4px;
                                             " aria-hidden="true" alt="" elementtiming="LCP-target" src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=x_large" data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=x_large">
-                                          <div class="_15p4g025" style="
+                                          <div class="background__img-position-center" style="
                                               background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=x_large);
                                               background-size: cover;
                                               border-radius: 4px;
@@ -271,7 +271,7 @@
                                                 vertical-align: bottom;
                                                 border-radius: 4px;
                                               " aria-hidden="true" alt="" elementtiming="LCP-target" src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=x_large" data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=x_large">
-                                            <div class="_15p4g025" style="
+                                            <div class="background__img-position-center" style="
                                                 background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=x_large);
                                                 background-size: cover;
                                                 border-radius: 4px;
