--- a/payments/payment.html
+++ b/payments/payment.html
@@ -10942,7 +10942,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                                 src="https://a0.muscache.com/im/pictures/user/ebf61663-ee6e-4aac-9a9a-7b3bf7815b2b.jpg?aki_policy=profile_x_medium"
                                 data-original-uri="https://a0.muscache.com/im/pictures/user/ebf61663-ee6e-4aac-9a9a-7b3bf7815b2b.jpg?aki_policy=profile_x_medium"
                                 style="object-fit: cover; vertical-align: bottom;">
-                              <div class="_15p4g025"
+                              <div class="background__img-position-center"
                                 style="background-image: url(&quot;https://a0.muscache.com/im/pictures/user/ebf61663-ee6e-4aac-9a9a-7b3bf7815b2b.jpg?aki_policy=profile_x_medium&quot;); background-size: cover;">
                               </div>
                             </div>
