--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -1032,7 +1032,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltbdffd0686ebb0ffe/6308ec0c084d1c663dbbbd55/image1.jpg?crop=100p,84.47p,x0,y10p&amp;width=720&amp;height=405&amp;auto=webp"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltbdffd0686ebb0ffe/6308ec0c084d1c663dbbbd55/image1.jpg?crop=100p,84.47p,x0,y10p&amp;width=720&amp;height=405&amp;auto=webp"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltbdffd0686ebb0ffe/6308ec0c084d1c663dbbbd55/image1.jpg?crop=100p,84.47p,x0,y10p&amp;width=720&amp;height=405&amp;auto=webp&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1071,7 +1071,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt1761114afc405ce7/60b65b93e5c1e719818186ca/pricing-strategies-for-experiences.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt1761114afc405ce7/60b65b93e5c1e719818186ca/pricing-strategies-for-experiences.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt1761114afc405ce7/60b65b93e5c1e719818186ca/pricing-strategies-for-experiences.jpeg?crop=16:9&amp;height=900&amp;width=1600&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1110,7 +1110,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltc31c8afce6db9cd5/62c47f1cdf301031126c33bb/SIN_SE-39535_04_R1.jpg?crop=100p,84.47p,x0,y12.63p&amp;width=720&amp;height=405&amp;auto=webp"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltc31c8afce6db9cd5/62c47f1cdf301031126c33bb/SIN_SE-39535_04_R1.jpg?crop=100p,84.47p,x0,y12.63p&amp;width=720&amp;height=405&amp;auto=webp"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltc31c8afce6db9cd5/62c47f1cdf301031126c33bb/SIN_SE-39535_04_R1.jpg?crop=100p,84.47p,x0,y12.63p&amp;width=720&amp;height=405&amp;auto=webp&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1149,7 +1149,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltac6201c100d929b6/61e05afd1d7fff0fa8ba1512/US_SE-393070_09_48_R.jpg?crop=100p,84.47p,x0,y0&amp;width=720&amp;height=405&amp;auto=webp"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltac6201c100d929b6/61e05afd1d7fff0fa8ba1512/US_SE-393070_09_48_R.jpg?crop=100p,84.47p,x0,y0&amp;width=720&amp;height=405&amp;auto=webp"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltac6201c100d929b6/61e05afd1d7fff0fa8ba1512/US_SE-393070_09_48_R.jpg?crop=100p,84.47p,x0,y0&amp;width=720&amp;height=405&amp;auto=webp&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1188,7 +1188,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt699d07f00c5228d5/624cb04f7d552701c636663c/seo_article_1_image_redo.jpg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt699d07f00c5228d5/624cb04f7d552701c636663c/seo_article_1_image_redo.jpg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt699d07f00c5228d5/624cb04f7d552701c636663c/seo_article_1_image_redo.jpg?crop=16:9&amp;height=900&amp;width=1600&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1227,7 +1227,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt2f37e9ef743bd40e/624b86657d552701c636629f/SEO_keywords_experience_hosts.jpg?crop=100p,84.47p,x0,y15.52p&amp;width=720&amp;height=405&amp;auto=webp"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt2f37e9ef743bd40e/624b86657d552701c636629f/SEO_keywords_experience_hosts.jpg?crop=100p,84.47p,x0,y15.52p&amp;width=720&amp;height=405&amp;auto=webp"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt2f37e9ef743bd40e/624b86657d552701c636629f/SEO_keywords_experience_hosts.jpg?crop=100p,84.47p,x0,y15.52p&amp;width=720&amp;height=405&amp;auto=webp&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1266,7 +1266,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt3831de97f00de61f/6127e0fbcc95cf70fa045092/Help_guests_with_disabilities_join_your_Experience.jpg?crop=100p,84.47p,x0,y0&amp;width=720&amp;height=405&amp;auto=webp"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt3831de97f00de61f/6127e0fbcc95cf70fa045092/Help_guests_with_disabilities_join_your_Experience.jpg?crop=100p,84.47p,x0,y0&amp;width=720&amp;height=405&amp;auto=webp"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt3831de97f00de61f/6127e0fbcc95cf70fa045092/Help_guests_with_disabilities_join_your_Experience.jpg?crop=100p,84.47p,x0,y0&amp;width=720&amp;height=405&amp;auto=webp&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1312,7 +1312,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltafc420e663117644/60b6613b1ea8cc0cc03a2201/DSC05917.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltafc420e663117644/60b6613b1ea8cc0cc03a2201/DSC05917.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltafc420e663117644/60b6613b1ea8cc0cc03a2201/DSC05917.jpeg?crop=16:9&amp;height=900&amp;width=1600&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1358,7 +1358,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt716e4e911e4bca34/60b660361ea8cc0cc03a21fd/who-books-experiences.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt716e4e911e4bca34/60b660361ea8cc0cc03a21fd/who-books-experiences.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt716e4e911e4bca34/60b660361ea8cc0cc03a21fd/who-books-experiences.jpeg?crop=16:9&amp;height=900&amp;width=1600&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1397,7 +1397,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt96ac10764273807f/60b667ba1666081987864c4b/GR_SI-267244_LEADING-IMAGE_81_Web_R.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt96ac10764273807f/60b667ba1666081987864c4b/GR_SI-267244_LEADING-IMAGE_81_Web_R.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt96ac10764273807f/60b667ba1666081987864c4b/GR_SI-267244_LEADING-IMAGE_81_Web_R.jpeg?crop=16:9&amp;height=900&amp;width=1600&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1436,7 +1436,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt52e17af748fe5309/60b65ca97979111986c70857/screen-shot-2018-03-12-at-5-33-53-pm-1600x900.png?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt52e17af748fe5309/60b65ca97979111986c70857/screen-shot-2018-03-12-at-5-33-53-pm-1600x900.png?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt52e17af748fe5309/60b65ca97979111986c70857/screen-shot-2018-03-12-at-5-33-53-pm-1600x900.png?crop=16:9&amp;height=900&amp;width=1600&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1475,7 +1475,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt13d52c1002eae485/60ae2bf5b29743655f634097/Smaller_SeasonalQ2_John_San-Francisco_Elliott_0229-copy.jpg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt13d52c1002eae485/60ae2bf5b29743655f634097/Smaller_SeasonalQ2_John_San-Francisco_Elliott_0229-copy.jpg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt13d52c1002eae485/60ae2bf5b29743655f634097/Smaller_SeasonalQ2_John_San-Francisco_Elliott_0229-copy.jpg?crop=16:9&amp;height=900&amp;width=1600&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
