--- a/submission/title.html
+++ b/submission/title.html
@@ -1244,7 +1244,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                     data-original-uri="https://a0.muscache.com/im/pictures/94e4e574-d8c2-4fea-9f34-e238e20aa313.jpg?im_w=240"
                     style="object-fit: cover; vertical-align: bottom;"
                    />
-                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/94e4e574-d8c2-4fea-9f34-e238e20aa313.jpg?im_w=240'); background-size: cover;"></div>
+                   <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/94e4e574-d8c2-4fea-9f34-e238e20aa313.jpg?im_w=240'); background-size: cover;"></div>
                   </div>
                   <div class="_51dwk2">Trail run through beautiful Jeju Island</div>
                  </li>
@@ -1259,7 +1259,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                     data-original-uri="https://a0.muscache.com/im/pictures/b4500efa-3949-41a4-89b8-598e9880fb68.jpg?im_w=240"
                     style="object-fit: cover; vertical-align: bottom;"
                    />
-                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/b4500efa-3949-41a4-89b8-598e9880fb68.jpg?im_w=240'); background-size: cover;"></div>
+                   <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/b4500efa-3949-41a4-89b8-598e9880fb68.jpg?im_w=240'); background-size: cover;"></div>
                   </div>
                   <div class="_51dwk2">Making pasta by hand with the grandmas</div>
                  </li>
@@ -1274,7 +1274,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                     data-original-uri="https://a0.muscache.com/im/pictures/c23196f9-7443-4c6d-ba87-e1abdd5f35ad.jpg?im_w=240"
                     style="object-fit: cover; vertical-align: bottom;"
                    />
-                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/c23196f9-7443-4c6d-ba87-e1abdd5f35ad.jpg?im_w=240'); background-size: cover;"></div>
+                   <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/c23196f9-7443-4c6d-ba87-e1abdd5f35ad.jpg?im_w=240'); background-size: cover;"></div>
                   </div>
                   <div class="_51dwk2">Penguin walk with a conservationist</div>
                  </li>
@@ -1289,7 +1289,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                     data-original-uri="https://a0.muscache.com/im/pictures/bbffdc9d-ecbb-4bdc-b97d-e4f410b051c3.jpg?im_w=240"
                     style="object-fit: cover; vertical-align: bottom;"
                    />
-                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/bbffdc9d-ecbb-4bdc-b97d-e4f410b051c3.jpg?im_w=240'); background-size: cover;"></div>
+                   <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/bbffdc9d-ecbb-4bdc-b97d-e4f410b051c3.jpg?im_w=240'); background-size: cover;"></div>
                   </div>
                   <div class="_51dwk2">Songwriting with a Nashville musician</div>
                  </li>
