--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -3869,7 +3869,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                       data-original-uri="https://a0.muscache.com/im/pictures/e4468f0c-ff12-4ff4-9691-afc0dabdc8a7.jpg?im_w=240"
                       style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                      />
-                     <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/e4468f0c-ff12-4ff4-9691-afc0dabdc8a7.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
+                     <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/e4468f0c-ff12-4ff4-9691-afc0dabdc8a7.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
                     </div>
                    </div>
                    <div class="_gfomxi">
@@ -3901,7 +3901,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                       data-original-uri="https://a0.muscache.com/im/pictures/13c4090f-d549-4c69-b724-15ed49de040a.jpg?im_w=240"
                       style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                      />
-                     <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/13c4090f-d549-4c69-b724-15ed49de040a.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
+                     <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/13c4090f-d549-4c69-b724-15ed49de040a.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
                     </div>
                    </div>
                    <div class="_gfomxi">
@@ -3935,7 +3935,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                       data-original-uri="https://a0.muscache.com/im/pictures/7074f284-7401-496d-a065-f0a64f7c0fa0.jpg?im_w=240"
                       style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                      />
-                     <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/7074f284-7401-496d-a065-f0a64f7c0fa0.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
+                     <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/7074f284-7401-496d-a065-f0a64f7c0fa0.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
                     </div>
                    </div>
                    <div class="_gfomxi">
@@ -3977,7 +3977,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                       data-original-uri="https://a0.muscache.com/im/pictures/e8c10c9a-5eda-4440-9b9e-f047cfe7a27d.jpg?im_w=240"
                       style="object-fit: cover; vertical-align: bottom; border-radius: 8px;"
                      />
-                     <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/e8c10c9a-5eda-4440-9b9e-f047cfe7a27d.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
+                     <div class="background__img-position-center" style="background-image: url('https://a0.muscache.com/im/pictures/e8c10c9a-5eda-4440-9b9e-f047cfe7a27d.jpg?im_w=240'); background-size: cover; border-radius: 8px;"></div>
                     </div>
                    </div>
                    <div class="_gfomxi">
