--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3661,7 +3661,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -3732,7 +3732,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/0a76a514-862e-4d55-bb45-cd0d9fccba05.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -3803,7 +3803,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/dca15e8a-6a92-4291-b033-2d942514e8d9.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -3874,7 +3874,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/ac50c0cc-db0d-4290-88d6-a70fe4e1a98c.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -3945,7 +3945,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/a894db2d-87a7-4f04-8204-3dd95167478a.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4016,7 +4016,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/2afdc438-6805-42c6-829c-446b72dff354.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4087,7 +4087,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/8a4ad4a4-1068-45f4-808d-5827b7498dc0.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4158,7 +4158,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c0565b77-ef6e-4d80-9907-4174f321077a.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4229,7 +4229,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/5906f2ff-74de-4e8d-a348-f4dd43f1b247.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4413,7 +4413,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4484,7 +4484,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/0a76a514-862e-4d55-bb45-cd0d9fccba05.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4555,7 +4555,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/dca15e8a-6a92-4291-b033-2d942514e8d9.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4626,7 +4626,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/ac50c0cc-db0d-4290-88d6-a70fe4e1a98c.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4697,7 +4697,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/a894db2d-87a7-4f04-8204-3dd95167478a.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4768,7 +4768,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/2afdc438-6805-42c6-829c-446b72dff354.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4839,7 +4839,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/8a4ad4a4-1068-45f4-808d-5827b7498dc0.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4910,7 +4910,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c0565b77-ef6e-4d80-9907-4174f321077a.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
@@ -4981,7 +4981,7 @@
                                 />
                                </picture>
                                <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/5906f2ff-74de-4e8d-a348-f4dd43f1b247.jpeg?im_w=720'); background-size: cover;"
                                ></div>
                               </div>
