--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -13600,7 +13600,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/user/9cdaaee5-1a67-4c44-8101-6f0785c5fe8b.jpg?im_w=240');
                                                           background-size: cover;
@@ -13718,7 +13718,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/user/c886b3ce-b607-4a23-9b07-ae8c4151592e.jpg?im_w=240');
                                                           background-size: cover;
@@ -13833,7 +13833,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/defaults/user_pic-225x225.png?im_w=240');
                                                           background-size: cover;
@@ -13943,7 +13943,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/users/31729712/profile_pic/1430661568/original.jpg?im_w=240');
                                                           background-size: cover;
@@ -14121,7 +14121,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/users/4068979/profile_pic/1389544948/original.jpg?im_w=240');
                                                           background-size: cover;
