--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -1055,7 +1055,7 @@
                                                 src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltbdffd0686ebb0ffe/6308ec0c084d1c663dbbbd55/image1.jpg?crop=100p,84.47p,x0,y10p&amp;width=1050&amp;height=591&amp;auto=webp"
                                                 data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltbdffd0686ebb0ffe/6308ec0c084d1c663dbbbd55/image1.jpg?crop=100p,84.47p,x0,y10p&amp;width=1050&amp;height=591&amp;auto=webp"
                                                 style="object-fit: cover; vertical-align: bottom;">
-                                            <div class="_15p4g025"
+                                            <div class="background__img-position-center"
                                                 style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltbdffd0686ebb0ffe/6308ec0c084d1c663dbbbd55/image1.jpg?crop=100p,84.47p,x0,y10p&amp;width=1050&amp;height=591&amp;auto=webp&quot;); background-size: cover;">
                                             </div>
                                           </div>
@@ -1322,7 +1322,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt1761114afc405ce7/60b65b93e5c1e719818186ca/pricing-strategies-for-experiences.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt1761114afc405ce7/60b65b93e5c1e719818186ca/pricing-strategies-for-experiences.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt1761114afc405ce7/60b65b93e5c1e719818186ca/pricing-strategies-for-experiences.jpeg?crop=16:9&amp;height=900&amp;width=1600&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1361,7 +1361,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt5ee8be8fc5edbbed/60b663221666081987864c21/2017-10-30-Ruthy-Food-Tour-9.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt5ee8be8fc5edbbed/60b663221666081987864c21/2017-10-30-Ruthy-Food-Tour-9.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt5ee8be8fc5edbbed/60b663221666081987864c21/2017-10-30-Ruthy-Food-Tour-9.jpeg?crop=16:9&amp;height=900&amp;width=1600&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
@@ -1407,7 +1407,7 @@
                                                                                         src="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltafc420e663117644/60b6613b1ea8cc0cc03a2201/DSC05917.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltafc420e663117644/60b6613b1ea8cc0cc03a2201/DSC05917.jpeg?crop=16:9&amp;height=900&amp;width=1600"
                                                                                         style="object-fit: cover; vertical-align: bottom;">
-                                                                                    <div class="_15p4g025"
+                                                                                    <div class="background__img-position-center"
                                                                                         style="background-image: url(&quot;https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltafc420e663117644/60b6613b1ea8cc0cc03a2201/DSC05917.jpeg?crop=16:9&amp;height=900&amp;width=1600&quot;); background-size: cover;">
                                                                                     </div>
                                                                                 </div>
